# PyPep3

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.py
data/cantera/: nasa_gas_h2o2.yaml
docs/: CEA_README.md
examples/: README.md  cea_examples.py
pycea/streamlit/: streamlit_app.py
pycea/streamlit/pages/: mixture.py
pycea/streamlit/widgets/: input_boxes.py
src/PyPep/: PyPep.py  __init__.py
src/PyPep3/: PyPep.py  PyPep_backup.py
src/pycea/: __init__.py
src/pycea/core/: __init__.py  pycea.py  rocket_cea.py
tests/: test_cea_package.py  tests.ipynb
